JumpScript/tests/baselines/reference/parserErrorRecovery_Block1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.jump(3,5): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.jump (1 errors) ====
    function f() {
        1 + 
        return;
        ~~~~~~
!!! error TS1109: Expression expected.
    }